# struct_migration_generator

./: CMakeLists.txt  generate_binary_registry.py  versions.json
include/: BinaryReaderRegistry.hpp  RegisterConversion.hpp  VersionConverter.hpp
include/aliases/: Player.hpp
include/test/: Player.hpp
include/versions/: Player.hpp  PlayerV1.hpp  PlayerV2.hpp  PlayerV3.hpp  PlayerV4.hpp  PlayerV5.hpp  PlayerV6.hpp  PlayerV7.hpp  PlayerV8.hpp
migrator/: comparer.py  generator.py  migrator.py  parser.py
migrator/templates/: migration.cpp.tpl
src/: BinaryReaderRegistry.cpp  main.cpp
src/migrations/: PlayerV1_to_V2.cpp  PlayerV2_to_V3.cpp  PlayerV3_to_V4.cpp  PlayerV4_to_V5.cpp  PlayerV5_to_V6.cpp  PlayerV6_to_V7.cpp  PlayerV7_to_V8.cpp
